fix caption on images with bleed

--- a/css/style.sass
+++ b/css/style.sass
@@ -778,7 +778,8 @@ $exsize: 40px
 		right: 5%
 	.details .bleed // figure.bleed
 		margin: 0 -10vw
-
+		h5
+			padding: 0 10%
 	.details figure .slider
 		margin: 0 -10vw
 		padding: 0
@@ -814,8 +815,6 @@ $exsize: 40px
 	.details figure
 		h5
 			width: auto
-		&.bleed h5
-			padding: 0 10%
 		.slider
 			margin: 0 -20vw
 			padding: 0
